:sparkles: added API documentation
