# api/main.go
@@ -4,15 +4,19 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-
 	"github.com/pji20242/backend/api/database"
 	_ "github.com/pji20242/backend/api/docs"
 	"github.com/pji20242/backend/api/handlers"
 )
 
-// @title AgroTech API
+// @title API para Sistema AgroTech
 // @version 1.0
-// @description API para o sistema AgroTech
+// @description Esta API permite interações com dispositivos e usuários do sistema AgroTech
+// @contact.name arthurcadore
+// @contact.url arthurcadore.github.io
+// @contact.email arthurbarcella.ifsc@gmail.com
+// @license.name MIT
+// @license.url https://opensource.org/licenses/MIT
 // @host localhost:8080
 // @BasePath /api/v1
 func main() {
@@ -26,6 +30,7 @@ func main() {
 		v1.GET("/cooperativas", handlers.ListCooperativas)
 		v1.GET("/devices", handlers.ListDevices)
 		v1.GET("/devices/:uuid", handlers.GetDeviceData)
+		v1.GET("/map", handlers.GetDeviceMap)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
